cambios generales para entrega final4

--- a/index.html
+++ b/index.html
@@ -1,143 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <!--Link archivos de estilos-->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
     <!--Link de bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>HG-MATES</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="fondo_encabezado">
-        <nav class="navbar navbar-expand-lg navbar-custom px-3">
-            <!--Este es el titulo de mi pagina-->
-            <h1 class="titulos">HGMATES</h1>
-            <img id="logo_principal" src="./assets/logos/logoHG.png" alt="Logo marca">
+      <nav class="navbar navbar-expand-lg navbar-custom px-3">
+        <!--Este es el titulo de mi pagina-->
+        <h1 class="titulos">HGMATES</h1>
+        <img
+          id="logo_principal"
+          src="./assets/logos/logoHG.png"
+          alt="Logo marca"
+        />
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
-                aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarMain"
+          aria-controls="navbarMain"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarMain">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/sobrenosotros.html">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/clientes.html">Clientes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/ppff.html">Preguntas Frecuentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contactos</a></li>
-                </ul>
-                <div class="icono-contenedor">
-                    <i class="fas fa-user-circle icono"></i>
-                    <i class="fas fa-shopping-cart icono"></i>
-                </div>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarMain">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="">Inicio</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/sobrenosotros.html"
+                >Sobre Nosotros</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/clientes.html">Clientes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/ppff.html"
+                >Preguntas Frecuentes</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/contacto.html">Contactos</a>
+            </li>
+          </ul>
+          <div class="icono-contenedor">
+            <i class="fas fa-user-circle icono"></i>
+            <i class="fas fa-shopping-cart icono"></i>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-        <section class="beneficios-section">
-            <h2>Beneficios del Mate</h2>
+      <section class="beneficios-section">
+        <h2>Beneficios del Mate</h2>
 
-            <div class="beneficio" data-aos="fade-right">
-                <h3><i class="fas fa-brain"></i> Estimulación del sistema nervioso central</h3>
-                <p>La cafeína presente en el mate actúa como un estimulante, mejorando la concentración y brindando
-                    energía.</p>
-            </div>
+        <div class="beneficio" data-aos="fade-right">
+          <h3>
+            <i class="fas fa-brain"></i> Estimulación del sistema nervioso
+            central
+          </h3>
+          <p>
+            La cafeína presente en el mate actúa como un estimulante, mejorando
+            la concentración y brindando energía.
+          </p>
+        </div>
 
-            <div class="beneficio" data-aos="fade-left">
-                <h3><i class="fas fa-weight"></i> Ayuda en la pérdida de peso</h3>
-                <p>El mate puede contribuir a la pérdida de peso y a la prevención de la diabetes.</p>
-            </div>
+        <div class="beneficio" data-aos="fade-left">
+          <h3><i class="fas fa-weight"></i> Ayuda en la pérdida de peso</h3>
+          <p>
+            El mate puede contribuir a la pérdida de peso y a la prevención de
+            la diabetes.
+          </p>
+        </div>
 
-            <div class="beneficio" data-aos="fade-right">
-                <h3><i class="fas fa-heartbeat"></i> Prevención de enfermedades cardiovasculares</h3>
-                <p>El mate puede ayudar a mantener la salud cardiovascular al promover la circulación sanguínea y
-                    reducir los niveles de colesterol malo.</p>
+        <div class="beneficio" data-aos="fade-right">
+          <h3>
+            <i class="fas fa-heartbeat"></i> Prevención de enfermedades
+            cardiovasculares
+          </h3>
+          <p>
+            El mate puede ayudar a mantener la salud cardiovascular al promover
+            la circulación sanguínea y reducir los niveles de colesterol malo.
+          </p>
+        </div>
+      </section>
+      <!--Seccion de prodcutos destacados-->
+      <section>
+        <h2 class="titulos">DESTACADOS</h2>
+        <div class="tarjetas" data-aos="zoom-out-up">
+          <div class="card tarjetas2">
+            <img
+              src="./assets/productos/mateImperial.jpg"
+              class="card-img-top"
+              alt="imagen de imperial marron"
+            />
+            <div class="card-body">
+              <h5 class="card-title">MATES</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                numquam ut dolor culpa
+              </p>
+              <a href="#" class="btn btn-primary button carrito"
+                >Agregar a Carrito</a
+              >
             </div>
-        </section>
-        <!--Seccion de prodcutos destacados-->
-        <section>
-
-            <h2 class="titulos">DESTACADOS</h2>
-            <div class="tarjetas" data-aos="zoom-out-up">
-                <div class="card tarjetas2">
-                    <img src="./assets/productos/mateImperial.jpg" class="card-img-top" alt="imagen de imperial marron">
-                    <div class="card-body">
-                        <h5 class="card-title">MATES</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
-                            dolor culpa</p>
-                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
-                    </div>
-                </div>
-                <div class="card tarjetas2" data-aos="zoom-out-up">
-                    <img src="./assets/productos/termo1.jpg" class="card-img-top" alt="imagen de termo negro">
-                    <div class="card-body">
-                        <h5 class="card-title">TERMOS</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
-                            dolor culpa</p>
-                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
-                    </div>
-                </div>
-                <div class="card tarjetas2" data-aos="zoom-out-up">
-                    <img src="./assets/productos/cuchillo1.png" class="card-img-top" alt="imagen de cuchillo">
-                    <div class="card-body">
-                        <h5 class="card-title">CUCHILLOS</h5>
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias numquam ut
-                            dolor culpa</p>
-                        <a href="#" class="btn btn-primary button carrito">Agregar a Carrito</a>
-                    </div>
-                </div>
+          </div>
+          <div class="card tarjetas2" data-aos="zoom-out-up">
+            <img
+              src="./assets/productos/termo1.jpg"
+              class="card-img-top"
+              alt="imagen de termo negro"
+            />
+            <div class="card-body">
+              <h5 class="card-title">TERMOS</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                numquam ut dolor culpa
+              </p>
+              <a href="#" class="btn btn-primary button carrito"
+                >Agregar a Carrito</a
+              >
             </div>
-        </section>
+          </div>
+          <div class="card tarjetas2" data-aos="zoom-out-up">
+            <img
+              src="./assets/productos/cuchillo1.png"
+              class="card-img-top"
+              alt="imagen de cuchillo"
+            />
+            <div class="card-body">
+              <h5 class="card-title">CUCHILLOS</h5>
+              <p class="card-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                numquam ut dolor culpa
+              </p>
+              <a href="#" class="btn btn-primary button carrito"
+                >Agregar a Carrito</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="pie_de_pagina">
-        <div class="pie_de_pagina_grid">
-            <div class="contactenos">
-                <h3>Contactenos</h3>
-                <p>Telefono: 11-33665545 </p>
-                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
-                <p>Localidad: LOMAS DEL MIRADOR </p>
-                <p>Provincia : BS AS </p>
-                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
-            </div>
-            <div class="redes">
-                <h3>Nuestras Redes</h3>
-                <div>
-                    <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
-                    <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
-                </div>
-            </div>
+      <div class="pie_de_pagina_grid">
+        <div class="contactenos">
+          <h3>Contactenos</h3>
+          <p>Telefono: 11-33665545</p>
+          <p>Direccion: AV DIAZ MOSCONI 1524</p>
+          <p>Localidad: LOMAS DEL MIRADOR</p>
+          <p>Provincia : BS AS</p>
+          <p>Correo Electronico: HGMATES@GMAIL.COM</p>
+        </div>
+        <div class="redes">
+          <h3>Nuestras Redes</h3>
+          <div>
+            <a
+              href="https://www.instagram.com/hgmates"
+              target="_blank"
+              class="fa-brands fa-instagram"
+            ></a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="fa-brands fa-facebook"
+            ></a>
+            <a
+              href="https://www.tiktok.com"
+              target="_blank"
+              class="fa-brands fa-tiktok"
+            ></a>
+          </div>
+        </div>
 
-            <div class="newsletter">
-                <h3>Newsletter</h3>
-                <P>Suscribase</p>
-                <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
-                    <input type="submit" value="Suscribir">
-                </form>
-            </div>
+        <div class="newsletter">
+          <h3>Newsletter</h3>
+          <p>Suscribase</p>
+          <form method="post" action="/send" class="Newsletter">
+            CORREO: <input name="correo" />
+            <input type="submit" value="Suscribir" />
+          </form>
         </div>
-        <div class="pie_de_pagina_copy">
-            <p>Diseño por Jonatan</p>
-        </div>
+      </div>
+      <div class="pie_de_pagina_copy">
+        <p>Diseño por Jonatan</p>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init();
+      AOS.init();
     </script>
-</body>
-
+  </body>
 </html>
