--- a/pages/ppff.html
+++ b/pages/ppff.html
@@ -1,104 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <!--Link archivos de estilos-->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css" />
     <!--Link de bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>HG MATES - Preguntas Frecuentes</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-custom px-3">
-    <!--Este es el titulo de mi pagina-->
-                <h1 class="titulos">HGMATES</h1>
-                <img id="logo_principal" src="../assets/logos/logoHG.png" alt="Logo marca">
+      <nav class="navbar navbar-expand-lg navbar-custom px-3">
+        <!--Este es el titulo de mi pagina-->
+        <h1 class="titulos">HGMATES</h1>
+        <img
+          id="logo_principal"
+          src="../assets/logos/logoHG.png"
+          alt="Logo marca"
+        />
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarMain"
+          aria-controls="navbarMain"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarMain">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="clientes.html">Clientes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Preguntas Frecuentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                </ul>
-                <div class="icono-contenedor">
-                    <i class="fas fa-user-circle icono"></i> 
-                    <i class="fas fa-shopping-cart icono"></i>
-                </div>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarMain">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="clientes.html">Clientes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Preguntas Frecuentes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+          <div class="icono-contenedor">
+            <i class="fas fa-user-circle icono"></i>
+            <i class="fas fa-shopping-cart icono"></i>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-        <section class="ppff-section">
-             <details class="ppff-item">
-                <summary>1. ¿Qué tipo de mates venden y cuál es el más recomendado para principiantes?</summary>
-                <p>Vendemos mates de calabaza, madera, acero inoxidable y cerámica. Para principiantes, recomendamos los de acero o cerámica ya que no requieren curado y son más fáciles de mantener.</p>
-            </details>
+      <section class="ppff-section">
+        <details class="ppff-item">
+          <summary>
+            1. ¿Qué tipo de mates venden y cuál es el más recomendado para
+            principiantes?
+          </summary>
+          <p>
+            Vendemos mates de calabaza, madera, acero inoxidable y cerámica.
+            Para principiantes, recomendamos los de acero o cerámica ya que no
+            requieren curado y son más fáciles de mantener.
+          </p>
+        </details>
 
-            <details class="ppff-item">
-                <summary>2. ¿Cómo se cura un mate de calabaza antes de usarlo?</summary>
-                <p>Se llena con yerba usada húmeda y un poco de agua caliente durante 24-48 horas. Luego se enjuaga bien y se repite el proceso una vez más. Esto evita que el mate tome sabor amargo o se agriete.</p>
-            </details>
+        <details class="ppff-item">
+          <summary>
+            2. ¿Cómo se cura un mate de calabaza antes de usarlo?
+          </summary>
+          <p>
+            Se llena con yerba usada húmeda y un poco de agua caliente durante
+            24-48 horas. Luego se enjuaga bien y se repite el proceso una vez
+            más. Esto evita que el mate tome sabor amargo o se agriete.
+          </p>
+        </details>
 
-            <details class="ppff-item">
-                <summary>3. ¿Hacen envíos a todo el país y al exterior?</summary>
-                <p>Sí, realizamos envíos a todo el país mediante correo o mensajería. También enviamos al exterior, dependiendo del país y las regulaciones aduaneras.</p>
-            </details>
-            <details class="ppff-item">
-                <summary>4. ¿Ofrecen mates personalizados o grabados?</summary>
-                <p>Se llena con yerba usada húmeda y un poco de agua caliente durante 24-48 horas. Luego se enjuaga bien y se repite el proceso una vez más. Esto evita que el mate tome sabor amargo o se agriete.</p>
-            </details>
+        <details class="ppff-item">
+          <summary>3. ¿Hacen envíos a todo el país y al exterior?</summary>
+          <p>
+            Sí, realizamos envíos a todo el país mediante correo o mensajería.
+            También enviamos al exterior, dependiendo del país y las
+            regulaciones aduaneras.
+          </p>
+        </details>
+        <details class="ppff-item">
+          <summary>4. ¿Ofrecen mates personalizados o grabados?</summary>
+          <p>
+            Se llena con yerba usada húmeda y un poco de agua caliente durante
+            24-48 horas. Luego se enjuaga bien y se repite el proceso una vez
+            más. Esto evita que el mate tome sabor amargo o se agriete.
+          </p>
+        </details>
 
-            <details class="ppff-item">
-                <summary>5. ¿Qué mantenimiento necesita un mate para que dure más tiempo?</summary>
-                <p>Recomendamos limpiarlo siempre después de usarlo, dejarlo secar boca abajo y no dejar yerba húmeda por muchas horas. En el caso de los mates de calabaza, evitar el uso de detergente y siempre secar bien después de cada uso.</p>
-            </details>
-        </section>
+        <details class="ppff-item">
+          <summary>
+            5. ¿Qué mantenimiento necesita un mate para que dure más tiempo?
+          </summary>
+          <p>
+            Recomendamos limpiarlo siempre después de usarlo, dejarlo secar boca
+            abajo y no dejar yerba húmeda por muchas horas. En el caso de los
+            mates de calabaza, evitar el uso de detergente y siempre secar bien
+            después de cada uso.
+          </p>
+        </details>
+      </section>
     </main>
     <footer class="pie_de_pagina">
-        <div class="pie_de_pagina_grid">
-            <div class="contactenos">
-                <h3>Contactenos</h3>
-                <p>Telefono: 11-33665545 </p>
-                <p>Direccion: AV DIAZ MOSCONI 1524 </p>
-                <p>Localidad: LOMAS DEL MIRADOR </p>
-                <p>Provincia : BS AS </p>
-                <p>Correo Electronico: HGMATES@GMAIL.COM </p>
-            </div>
-            <div class="redes">
-                <h3>Nuestras Redes</h3>
-                <div>
-                    <a href="https://www.instagram.com/hgmates" target="_blank" class="fa-brands fa-instagram"></a>
-                    <a href="https://www.facebook.com" target="_blank" class="fa-brands fa-facebook"></a>
-                    <a href="https://www.tiktok.com" target="_blank" class="fa-brands fa-tiktok"></a>
-                </div>
-            </div>
+      <div class="pie_de_pagina_grid">
+        <div class="contactenos">
+          <h3>Contactenos</h3>
+          <p>Telefono: 11-33665545</p>
+          <p>Direccion: AV DIAZ MOSCONI 1524</p>
+          <p>Localidad: LOMAS DEL MIRADOR</p>
+          <p>Provincia : BS AS</p>
+          <p>Correo Electronico: HGMATES@GMAIL.COM</p>
+        </div>
+        <div class="redes">
+          <h3>Nuestras Redes</h3>
+          <div>
+            <a
+              href="https://www.instagram.com/hgmates"
+              target="_blank"
+              class="fa-brands fa-instagram"
+            ></a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="fa-brands fa-facebook"
+            ></a>
+            <a
+              href="https://www.tiktok.com"
+              target="_blank"
+              class="fa-brands fa-tiktok"
+            ></a>
+          </div>
+        </div>
 
-            <div class="newsletter">
-                <h3>Newsletter</h3>
-                <P>Suscribase</p>
-                <form method="post" action="/send" class="Newsletter"> CORREO: <input name="correo">
-                    <input type="submit" value="Suscribir">
-                </form>
-            </div>
+        <div class="newsletter">
+          <h3>Newsletter</h3>
+          <p>Suscribase</p>
+          <form method="post" action="/send" class="Newsletter">
+            CORREO: <input name="correo" />
+            <input type="submit" value="Suscribir" />
+          </form>
         </div>
-        <div class="pie_de_pagina_copy">
-            <p>Diseño por Jonatan</p>
-        </div>
+      </div>
+      <div class="pie_de_pagina_copy">
+        <p>Diseño por Jonatan</p>
+      </div>
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
